[ADD] payment flow + split implementations
